sass/styles.sass
@use 'globals/variables' as var
@forward 'globals'

body
    background-color: var.$BG-COLOR
    padding: 3rem 0

header
    h1
        font-size: 4rem
        color: var.$HEADER-TEXT
        margin-bottom: 3rem
        padding-left: 2rem

.under
    z-index: 2

.selected
    border: 2px solid var.$RED
.products
    padding: 0 2rem
    transition: 1s ease-in-out
    #box
        max-width: 40rem
        margin-bottom: 1rem
        div
            margin-bottom: 3rem
            height: fit-content
            position: relative

            img
                width: 100%
                border-radius: 1rem
                &:active, &:hover
                    @extend .selected
            button
                position: absolute
                left: 50%
                bottom: 0
                cursor: pointer
                transform: translateY(2rem)translateX(-50%)
                img
                    &:active,&:hover
                        border: none
            .cart
                height: 5rem
                width: 18rem
                max-width: 20rem
                font-size: 1.6rem
                color: var.$HEADER-TEXT
                font-weight: var.$BOLD-TEXT
                display: flex
                align-items: center
                justify-content: center
                background-color: var.$BG-COLOR
                border: 0.1rem solid var.$PRODUCT-HIGHLIGHT-LIGHT
                border-radius: 3rem
                gap: 0.5rem
                &:active, &:hover
                    border: 2px solid var.$PRODUCT-HIGHLIGHT-LIGHT
                img
                    margin: 0
                    width: 2.5rem
            .order-qty
                @extend .cart
                background-color: var.$RED
                color: var.$BG-COLOR
                flex-direction: row-reverse
                padding: 0 1.2rem
                justify-content: space-between
                font-size: 1.8rem
                div
                    width: 2.5rem
                    height: 2.5rem
                    display: grid
                    place-content: center
                    border: 0.1rem solid var.$BG-COLOR
                    border-radius: 50%
                    margin: 0
                    cursor: pointer
                    transition: 1s ease
                    &:hover , &:active
                        background-color: var.$BG-COLOR
                        img
                            filter: invert(24%) sepia(91%) saturate(3419%) hue-rotate(358deg) brightness(50%) contrast(93%)
                    img
                        transition: 1s ease
                        width: 1.5rem

        .desc
            margin-bottom: 2rem
        .category
            color: var.$PRODUCT-HIGHLIGHT-LIGHT
            line-height: 1.9
        .products
            color: var.$HEADER-TEXT
        .price
            color: var.$RED
            font-weight: var.$BOLDER-TEXT
            &::before
                content: '$'
                padding-right: 0.2rem
.checkout
    max-width: 45rem
    transition: 1s ease-in-out
    background-color: var.$BG-COLOR
    display: flex
    width: 100%
    margin: auto
    align-items: center
    padding: 3rem 4rem 6rem 4rem
    flex-direction: column
    h2
        align-self: flex-start
        text-transform: capitalize
        color: var.$RED
        margin-bottom: 1.5rem

    .order
        @extend .checkout
        padding: 0
        margin-bottom: 2rem
        flex-direction: row
        width: 100%
        justify-content: space-between
        div:has(img)
            border: 2px solid var.$PRODUCT-TEXT
            width: 2.5rem
            height: 2.5rem
            border-radius: 50%
            display: grid
            place-content: center
            cursor: pointer
            transition: 1s ease
            &:hover, &:hover
                border: 2px solid var.$HEADER-TEXT
                img
                    filter: invert(24%) sepia(91%) saturate(3419%) hue-rotate(358deg) brightness(20%) contrast(93%)
        img
            width: 1.5rem
            transition: 1s ease
        div:has(p)
            .order-qty
                color: var.$RED
                margin-right: 1.5rem
            p:first-child
                color: var.$HEADER-TEXT
                margin-bottom: 0.5rem
            .price-per-order
                margin-right: 1rem
                color: var.$PRODUCT-HIGHLIGHT-DARK
                font-weight: var.$BOLD-TEXT
            .order-price-total

                color: var.$PRODUCT-HIGHLIGHT-LIGHT
    .total
        @extend .order
        font-size: 3rem
        margin-bottom: 4rem
        p
            font-size: 1.6rem
            color: var.$PRODUCT-HIGHLIGHT-DARK
            strong
                .order-total
                    color: var.$HEADER-TEXT
    .checkout-msg
        display: flex
        align-items: center
        gap: 0.5em
        color: var.$HEADER-TEXT
        font-weight: var.$BOLD-TEXT
        margin-bottom: 4rem
        img
            width: 2.5rem
    button
        background-color: var.$RED
        border: none
        color: var.$BG-COLOR
        padding: 2rem 7rem
        font-size: 2rem
        text-transform: capitalize
        font-weight: var.$BOLD-TEXT
        cursor: pointer
        transition: 1s ease
        border-radius: 4rem
        &:hover, &:active
            background-color: var.$HEADER-TEXT

.order-confirmed
    padding: 3rem 2rem 3rem 2rem
    width: 100%
    max-width: 45rem
    border-radius: 1rem 1rem 0 0
    position: sticky
    z-index: 99
    bottom: 0
    border: 0.2rem solid var.$PRODUCT-BG
    background-color: var.$BG-COLOR

    .order-highlight
        background-color: var.$PRODUCT-BG
        padding: 2.5rem
        margin-bottom: 3rem

        border-radius: 1rem
        .total
            display: flex
            justify-content: space-between
            align-items: center
            p
                font-weight: var.$BOLD-TEXT
                color: var.$PRODUCT-HIGHLIGHT-LIGHT
            strong
                font-size: 3rem
    img
        align-self: flex-start
        margin-bottom: 2rem
    h2
        font-size: 4.8rem
        width: 25rem
        margin-bottom: 0.5rem
        color: var.$HEADER-TEXT
    .order-msg
        align-self: flex-start
        font-size: 1.8rem
        color: var.$PRODUCT-HIGHLIGHT-LIGHT
        margin-bottom: 4rem
    .order img
        margin: 0
    .order
        justify-content: space-between
        padding: 0
        div:has(img)
            width: 6rem
            border: none
            &:hover , &:active
                img
                    filter: none
            img
                width: 100%
                border-radius: 0.4rem
                height: 100%
        .confirmed-item
            display: flex
            width: 100%
            justify-content: space-between
            border-bottom: 2px solid var.$PRODUCT-TEXT
            padding-bottom: 1rem
            align-items: center
            margin-bottom: 1rem
            .checkout-items p:nth-of-type(2)
                color: var.$PRODUCT-HIGHLIGHT-DARK
                .order-qty
                    color: var.$RED
                .price-per-order
                    color: var.$PRODUCT-HIGHLIGHT-LIGHT
        strong
            font-size: 1.8rem
        .product-info
            display: flex
            width: max-content
            align-items: center
        .checkout-items
            margin-left: 1.5rem
    button
        width: 100%
        background-color: var.$RED
        border: none
        color: var.$BG-COLOR
        padding: 2rem 7rem
        font-size: 2rem
        text-transform: capitalize
        font-weight: var.$BOLD-TEXT
        cursor: pointer
        transition: 1s ease
        border-radius: 4rem
        &:hover, &:active
            background-color: var.$HEADER-TEXT

.order-confirmed::before
    content: ''
    inset: 0
    position: absolute
    z-index: -3
    width: 100vw
    height: 100vh
    top: 50%
    left: 50%
    backdrop-filter: blur(0.2rem)
    transform: translateY(-70%) translateX(-50%)

.attribution
    font-size: 1.5rem
    font-weight: var.$BOLDER-TEXT
    gap: 0.5rem
    color: var.$HEADER-TEXT
    text-align: center

.attribution a
    text-decoration: none
    transition: 1s ease-in-out
    color: var.$GREEN

.attribution a:hover,
.attribution a:active
    color: var.$RED
main
    margin-bottom: 3rem
    display: flex
    align-items: center
    flex-direction: column
    min-width: 100%

.if-empty
    display: flex
    align-items: center
    gap: 1.5rem
    color: var.$PRODUCT-HIGHLIGHT-DARK
    font-weight: var.$BOLD-TEXT
    flex-direction: column

.if-not-empty
    width: 100%
    .total
        padding: 0
.hidden
    display: none
    overflow: hidden

.stop
    overflow: hidden

.cell
    flex-direction: column

@media (min-width: 600px)
    article
        width: 100%
    .products
        width: 100%
        place-items: center
        display: grid
        max-width: 93rem
        grid-template-columns: repeat(auto-fit,minmax(28rem, 1fr))
        #box
            div
                img
                    max-width: 28rem
                    height: 28rem
    .checkout
        border-radius: 1rem
        padding: 3rem
        .order
            padding: 0

    .order-confirmed
        border-radius: 1rem
@media (min-width: 1440px)
    header
        h1
            max-width: max-content
            padding-left: calc( ((100% - 138rem) / 2) + 1rem)
    article
        max-width: calc( 93rem + 45rem )
        display: flex
        align-items: start
        .products
            padding: 0
        .checkout
            position: sticky
            top: 5rem
            padding-top: 0
            margin: 0
            .order
                margin-bottom: 1rem
            button
                width: 100%
            h2
                transform: translateY(-4.5rem)
                font-size: 3.5rem
                margin-bottom: -2rem
    .order-confirmed
        height: fit-content
        position: absolute
        top: 50%
        padding: 3rem
        left: 50%
        transform: translateX(-50%) translateY(-50%)
    .order-confirmed::before
        transform: translateY(-50%) translateX(-50%)
    .order-box
        display: flex
        flex-direction: column
        gap: 2rem

